<resources>
    <string name="app_name">SAE_S4_01_App_Mobile</string>
    <string name="text_interro1"> Une <b>DataMatrix</b> situé sur votre boîte du médicament ressemble à un QRCode, c`est un <b>code barre 2D</b> </string>
    <string name="text_interro2"> Le <b>Code CIP</b> (7 ou 13 chiffres) sur votre boite de médicament permet <b>d`identifier</b> celui-ci</string>
    <string name="text_interro3"> La suppression d`un compte engendre la <b>suppression totale de vos données</b>, en êtes-vous sûr? </string>
    <string name="text_interro4"> La désactivation d`un compte <b>supprime votre compte temporairement</b>, qui peut être réactivé sous x mois</string>
    <string name="text_mode">Light Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="tri_options">
        <item>La plus récente</item>
        <item>La plus ancienne</item>
    </string-array>
    <string name="recent">La plus récente</string>
    <string name="ancien">La plus ancienne</string>
    <string name="avoir">Vous avez  </string>
    <string name="ale">  alertes au total</string>
    <string name="pertinance">Plus pertinent</string>
    <string name="text_dataMatrix"> Scanner le code <b>DataMatrix</b> </string>
    <string name="text_saisieCIP"> Saisir le <b>Code CIP</b> manuellement </string>
    <string name="Ravi_revoir">Ravi de vous revoir</string>
    <string name="cree_alerte"> Créer une alerte</string>
    <string name="last_alerte"> Ma dernière alerte</string>
    <string name="Médicament_concerné">Médicament concerné :</string>
    <string name="raison">Raison :</string>
    <string name="message">Message :</string>
    <string name="all_alerte">Voir toutes mes alertes...</string>
    <string name="date">18 février 2024</string>
    <string name="consulter"> Consulter les statistiques</string>
    <string name="nb_signal">Nombre de signalements :</string>
    <string name="medoc_signal">Médicament le plus signalé :</string>
    <string name="Administrateur">Administrateur</string>
    <string name="type">Type de maladie le plus signalé :</string>
    <string name="nd_CIP">Nombre de saisie CIP :</string>
    <string name="nb_data">Scan DataMatrix :</string>
    <string name="accee">Accéder aux statistiques...</string>
    <string name="last">Mes anciennes alertes</string>
    <string name="merci">Merci infiniment pour votre contribution !</string>
    <string name="tri"> Trier mes alertes par : </string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="reniti">Réinitialiser votre mot de passe !</string>
    <string name="mdp">Mot de passe</string>
    <string name="confirme_mdp">Confirmer votre mot de passe</string>
    <string name="valide">Valider</string>
    <string name="saisie">Saisie manuelle</string>
    <string name="code">Code CIP</string>
    <string name="annuler">Annuler</string>
    <string name="ou">OU</string>
    <string name="text_scanDataMatrix"> Vous avez plûtot une <b>DataMatrix ? </b> </string>
    <string name="scan">Scannez-le !</string>
    <string name="info">Remplissez ces informations : </string>
    <string name="ty">Merci infiniment pour votre contribution !</string>
    <string name="cip">Code CIP* :</string>
    <string name="nom_medoc">Nom du médicament* :</string>
    <string name="raison_">Raison* :</string>
    <string name="situation">Expliquez nous votre situation...</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="information">* Ces informations sont </string>
    <string name="obliger">obligatoires</string>
    <string name="importance"> Ce médicament est <b>indispensable</b> pour ma santé</string>
    <string name="compte">Vous avez déjà un compte ?</string>
    <string name="mail">Votre adresse mail : </string>
    <string name="amail">Adresse mail...</string>
    <string name="vmdp">Votre mot de passe  : "</string>
    <string name="Motpasse">Mot de passe...</string>
    <string name="oublie">MOT DE PASSE OUBLIÉ ?</string>
    <string name="connect">CONNECTEZ-VOUS !</string>
    <string name="cree_compte">CRÉER UN COMPTE</string>
    <string name="mesInfos">Mes informations</string>
    <string name="sexe">Sexe* : </string>
    <string name="nom">Nom* : </string>
    <string name="prenom">Prenom* :</string>
    <string name="naissance">Naissance* :</string>
    <string name="adrMail">Adresse mail* :</string>
    <string name="pharma">Pharmacie préférée :</string>
    <string name="medecin">Médecin traitant :</string>
    <string name="modif">Modifier</string>
    <string name="text_prospection"> En cochant cette case, vous acceptez de recevoir <b>par mail</b> des <b>actualités de santé</b> </string>
    <string name="supp">Supprimer mon compte</string>
    <string name="desac">Désactiver mon compte</string>
    <string name="sexe_">Sexe </string>
    <string name="nom_">Nom de famille</string>
    <string name="prenom_">Prénom</string>
    <string name="naissance_">JJ/MM/AAAA</string>
    <string name="adrMail_">Adresse mail</string>
    <string name="pharma_">Pharmacie préférée</string>
    <string name="medecin_">Médecin traitant</string>
    <string name="selection">Selectionner la langue</string>
    <string name="fr">Français</string>
    <string name="en">Anglais</string>
    <string name="nouveau">Vous êtes nouveau ?</string>
    <string name="quelque_info">Complétez quelques informations </string>
    <string name="genre"> Votre genre : </string>
    <string name="noom"> Votre nom : </string>
    <string name="preenom"> Votre prénom : </string>
    <string name="noom_">Nom...</string>
    <string name="preenom_">Prénom...</string>
    <string name="date_">Date de naissance :</string>
    <string name="jour">JJ</string>
    <string name="annee">AAAA</string>
    <string name="suite">Passer à la suite...</string>
    <string name="selectGenre">Selectionnez un genre</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="nr">Non renseigné</string>
    <string name="vmail"> Votre adresse mail  : </string>
    <string name="cmdp"> Votre mot de passe  : </string>
    <string name="text_condition"> En cochant cette case, vous acceptez nos <u>conditions générales d`utilisation</u> </string>
    <string name="finaliser">Finaliser Inscription </string>
    <string name="renit">Réinitialiser votre mot de passe !</string>
    <string name="code_verif">Code de vérification : </string>
    <string name="text_renit">Veuillez saisir votre adresse mail \n afin de reçevoir un code sur votre boite mail ! </string>
    <string name="CONFIR">CONFIRMER !</string>
    <string name="scanner">Scannez le code DataMatrix</string>
    <string name="conseil">Conseil :</string>
    <string name="version">Version 1.1</string>
    <string name="lesAlertes">Les alertes</string>
    <string name="nbAlertes">Total de X alertes</string>
    <string name="Personne">Personne :</string>
    <string name="ctheme">Change de theme !</string>
    <string name="quote1">Savez-vous que 10 minutes de méditation peuvent réduire l`anxiété et renforcer la confiance en soi ?</string>
    <string name="quote2">Savez-vous que la consommation d`aliments riches en fibres peut favoriser une meilleure digestion ?</string>
    <string name="quote3">Savez-vous que consommer 5 fruits et légumes par jour renforce votre système immunitaire ?</string>
    <string name="quote4">Savez-vous que dormir 7 à 8 heures par nuit peut favoriser une meilleure récupération musculaire ?</string>
    <string name="quote5">Savez-vous que marcher 10 000 pas par jour peut améliorer votre santé cardiovasculaire ?</string>
    <string name="Oui">Oui</string>
    <string name="Non">Non</string>
    <string name="back">Êtes-vous sûr de vouloir retourner en arriere ? Votre saisie sera annulée.</string>
    <string name="retour">Êtes-vous sûr de vouloir accéder à la page d`ancienne alerte ? Votre saisie sera annulée.</string>
    <string name="acc">Êtes-vous sûr de vouloir accéder à la page d`accueil ? Votre saisie sera annulée.</string>
    <string name="pcc">"Êtes-vous sûr de vouloir accéder à votre profil ? Votre saisie sera annulée."</string>
    <string name="cob">Veuillez remplir tous le champs obligatoire</string>
    <string name="format">L`adresse mail n`est pas sous le bon format</string>
    <string name="ienr">Vos informations ont bien été enregistré</string>
    <string name="ccmdp">Le mot de passe doit avoir au moins 8 caractères, une majuscule et un chiffre.</string>
    <string name="imdp">Les deux mots de passe ne sont pas identique</string>
    <string name="vdata">Vous avez plutôt une DataMatrix ?</string>
    <string name="ccip">Le numéro du CIS doit comporter 13 caractères.</string>
    <string name="ocip">Aucun médicament trouvé pour ce numéro CIS.</string>
    <string name="co">Vous êtes connecté !</string>
    <string name="imm">Votre email ou mot de passe est incorrect</string>
    <string name="cip_code">Le code CIP : </string>
    <string name="alert_reason">Raison de l`alerte</string>
    <string name="alert_message">Message d`alerte</string>
    <string name="alert_insert_success">Alerte insérée avec succès!</string>
    <string name="alert_insert_error">Erreur lors de l`insertion de l`alerte.</string>
    <string name="user_id_error">Erreur: ID de l`utilisateur non disponible.</string>
    <string name="no_medicament_found">Aucun médicament trouvé pour ce numéro CIS.</string>
    <string name="select_reason">Sélectionnez une raison</string>
    <string name="renewal_impossible">Renouvellement impossible</string>
    <string name="stock_unavailable">Stock indisponible</string>
    <string name="stock_insuffisant">Stock insufissant</string>
    <string name="late_delivery">Livraison tardive</string>
    <string name="other">Autre</string>
    <string name="select_gender">Veuillez sélectionner un genre</string>
    <string name="invalid_day">Le jour saisi n`est pas conforme</string>
    <string name="invalid_month">Le mois saisi n`est pas conforme</string>
    <string name="invalid_year">L`année saisie n`est pas conforme</string>
    <string name="invalid_email">Adresse email non valide</string>
    <string name="invalid_password">Le mot de passe doit avoir au moins 8 caractères, une majuscule et un chiffre.</string>
    <string name="accept_terms">Veuillez accepter les conditions générales d`utilisation</string>
    <string name="account_created">Votre compte a bien été créé !</string>
    <string name="existing_email">Un compte avec cette adresse email existe déjà ! Connectez-vous</string>
    <string name="existing_account">Un compte avec ce même nom et prénom existe déjà ! Connectez-vous</string>
    <string name="reset_code_invalid">Le code est erroné</string>
    <string name="reset_code_expired">Le code a expiré</string>
    <string name="email_format_incorrect">Le format de l`email n`est pas correct</string>
    <string name="no_account_associated">L`email saisi n`est associé à aucun compte</string>
    <string name="enter_email">Veuillez saisir une adresse e-mail</string>
    <string name="reset_email_sent">Un e-mail de réinitialisation a été envoyé</string>
    <string name="fill_all_fields">Veuillez remplir tous les champs</string>
    <string name="insert_success">Alerte insérée avec succès!</string>
    <string name="insert_error">Erreur lors de l`insertion de l`alerte.</string>
    <string name="valid_reason">Veuillez sélectionner une raison valide.</string>
    <string name="cancel_confirmation">Êtes-vous sûr de vouloir retourner en arrière ? Votre saisie sera annulée.</string>
    <string name="notif">Mes notifications</string>
    <string name="sonsage">Accéder au sondage</string>
    <string name="retour1">Accueil</string>
    <string name="retour2">Profil</string>
    <string name="retour3">Alerte </string>
</resources>