<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/bienvenue"
        android:fontFamily="@font/patuaone_regular"
        android:textColor="@color/darkBlueLight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginStart="270dp"
        android:layout_marginTop="-64dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/colombesblanc" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginStart="97dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/colombeslogo" />

    <ImageView
        android:id="@+id/colombesblanc2"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/colombesblanc2" />

    <LinearLayout
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/colombesblanc2"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Btext"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/patuaone_regular"
            android:gravity="center"
            android:text="@string/renit"
            android:textColor="@android:color/white"
            android:textSize="21.5dp" />


        <EditText
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:paddingBottom="10dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/mdp"
            android:inputType="textPassword"
            android:drawablePadding="8dp"
            android:paddingLeft="10dp"
            android:textStyle="italic"
            android:elevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/mdpConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/confirme_mdp"
            android:inputType="textPassword"
            android:drawablePadding="8dp"
            android:paddingLeft="10dp"
            android:textStyle="italic"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <Button
            android:id="@+id/reset"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/darkBlueLight"
            android:elevation="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/valide"
            android:textSize="15dp"
            tools:ignore="MissingConstraints,TextSizeCheck"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="529dp" />
    </LinearLayout>





</RelativeLayout>