<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/lightBlueLight"
    android:layout_marginBottom="30dp">

    <LinearLayout
        android:id="@+id/personneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp">

        <TextView
            android:id="@+id/personneLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/Personne"
            android:textColor="@color/textGrey"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/personneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="prenom NOM"
            android:textColor="@color/textDarkBlue"
            android:layout_marginLeft="5dp"
            android:textSize="12.5dp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="15dp"
        android:background="@color/lightBlue"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightBlue"
            android:paddingHorizontal="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/medicamentLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/Médicament_concerné"
                android:textColor="@color/textGrey"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/medicamentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/medicamentLabelTV"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/inter"
                android:text="GABAPENTINE RANBAXY 400 mg, gélule"
                android:textColor="@color/textDarkBlue"
                android:textSize="12.5dp" />

            <TextView
                android:id="@+id/raisonLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/medicamentTV"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/raison"
                android:textColor="@color/textGrey"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/raisonTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:layout_below="@+id/medicamentTV"
                android:layout_toRightOf="@+id/raisonLabelTV"
                android:fontFamily="@font/inter"
                android:text="Renouvellement impossible"
                android:textColor="@color/textDarkBlue"
                android:textSize="12.5dp"
            />

            <TextView
                android:id="@+id/messageLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/raisonLabelTV"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/message"
                android:textColor="@color/textGrey"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/messageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/messageLabelTV"
                android:layout_marginStart="3dp"
                android:layout_marginTop="2.4dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/inter"
                android:text="Ma pharmacie  !"
                android:textColor="@color/textDarkBlue"
                android:textSize="12.5dp"
                android:lineHeight="17dp"
            />


            <androidx.cardview.widget.CardView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/darkBlueLightLight"
                app:cardCornerRadius="10dp">


                <TextView
                    android:id="@+id/dataTV"
                    android:layout_alignParentRight="true"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:background="@color/darkBlueLightLight"
                    android:padding="3dp"
                    android:gravity="center"
                    android:textSize="11dp"
                />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>