<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <!-- ========== ENTETE =========== -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.23"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="456dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="-118dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="200dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ovale_shape" />

            <ImageView
                android:id="@+id/sedeconnecterBtn"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="38dp"
                android:src="@drawable/deconnexion" />

            <ImageView
                android:id="@+id/logoIV"
                android:layout_width="170dp"
                android:layout_height="90.92dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="144dp"
                android:layout_marginTop="55dp"
                android:src="@drawable/colombes_logo" />

            <ImageView
                android:id="@+id/notifBtn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="355dp"
                android:layout_marginTop="38dp"
                android:src="@drawable/cloche" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="385dp"
                android:layout_marginTop="23dp"
                android:alpha="0.8"
                app:cardBackgroundColor="@color/darkBlueLightLight"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/nbNotifTV"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!-- ========== FIN ENTETE =========== -->

    <!-- ========== PAGE =========== -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/notif"
                    android:textSize="21dp"
                    android:fontFamily="@font/patuaone_regular"
                    android:textColor="@color/darkBlue"
                    android:layout_marginLeft="20dp"
                    />

                <View
                    android:layout_width="195dp"
                    android:layout_height="1.5dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/lightBlue"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="49dp"
                android:layout_height="50dp"
                android:src="@drawable/notification_icone"
                android:layout_marginStart="93dp"
                android:layout_marginTop="6dp"
                android:layout_gravity="end"
                />

        </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginHorizontal="55dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/nbNotifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textSize="16dp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/darkBlue"
                />

        </LinearLayout>

        <ListView
            android:id="@+id/notificationListView"
            android:layout_width="wrap_content"
            android:layout_height="425dp"
            android:layout_marginTop="15dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="15dp"
            android:divider="@color/white"
            android:dividerHeight="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sondage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/sonsage"
            android:textColor="@color/darkBlue"
            android:textSize="16dp"
            android:visibility="gone"
             />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/alerte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/retour3"
            android:textColor="@color/darkBlue"
            android:textSize="16dp"
            android:layout_marginHorizontal="50dp"
            />

        <TextView
            android:id="@+id/accueil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/retour1"
            android:textColor="@color/darkBlue"
            android:textSize="16dp"
            android:layout_toRightOf="@id/alerte"
            android:layout_marginHorizontal="30dp"

            />

        <TextView
            android:id="@+id/profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/retour2"
            android:textColor="@color/darkBlue"
            android:textSize="16dp"
            android:layout_toRightOf="@id/accueil"
            android:layout_marginHorizontal="35dp"

            />

    </RelativeLayout>

    <!-- ========== FIN PAGE =========== -->

    <!-- ========== NAVBAR =========== -->
    <!-- ========== FIN NAVBAR =========== -->

</LinearLayout>
